# tumor_segmentation_cloned

./: .flake8  .gitignore  Dockerfile  Dockerfile_new_version  LICENSE  README.md  full_scan_segmentation.py  full_scan_segmentation_inference.py  full_scan_segmentation_preprocess.py  segment_images.py
common/: background_filter.py  common_utils.py  scan_utils.py
jobs/: preprocess_inference.sh  segmentation_job.sh
postprocess/: common.py  conv_crf.py  crf.py  prepare_mask.py  remove_small_regions.py  segment_probability_maps.py  utils.py
preprocess/prepare_scans/: apply_background_masks_on_tiles.py  common.py  create_background_masks.py  prepare_scans.py  utils.py
preprocess/scan_tiling/: common.py  configuration.py  corresponding.py  draw_tiles_on_image.py  grid.py  parallel_tiling.py  perform_tiling.py  process.py  tile_scans.py
preprocess/tile_with_overlap/: Cargo.toml
preprocess/tile_with_overlap/src/: main.rs  split.rs  utils.rs
preprocess/tile_with_overlap/src/restore/: align_tiles.rs  merge_average.rs  merge_minmax.rs  mod.rs  restore_utils.rs  simple.rs
process/: Dockerfile
process/config/: inference.toml  train.toml
process/src/: align_tiles.py  configurations.py  custom_fpn.py  data.py  encoders_init.py  merge_predictions.py  network.py  run_training.py  step_length.py  tile.py  timm_nfnet_encoder.py  utils.py
process/src/deeplabv3plus_gn/: __init__.py  decoder.py  model.py
process/src/deeplabv3plus_nonorm/: __init__.py  decoder.py  model.py
verify/: scan_tiling.py  tile_inference.py  utils.py
(+3 files in other folders)
